--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,29 +7,29 @@
 
     <fragment
         android:id="@+id/navigation_1"
-        android:name="com.example.test1.Fragment1"
+        android:name="com.example.summerpracticsosinandrey.Fragment1"
         android:label="First"
         tools:layout="@layout/fragment1" />
 
     <fragment
         android:id="@+id/navigation_2"
-        android:name="com.example.test1.Fragment2"
+        android:name="com.example.summerpracticsosinandrey.Fragment2"
         android:label="Second"
         tools:layout="@layout/fragment2" />
 
     <fragment
         android:id="@+id/navigation_3"
-        android:name="com.example.test1.Fragment3"
+        android:name="com.example.summerpracticsosinandrey.Fragment3"
         android:label="Third"
         tools:layout="@layout/fragment3" />
     <fragment
         android:id="@+id/navigation_4"
-        android:name="com.example.test1.Fragment4"
+        android:name="com.example.summerpracticsosinandrey.Fragment4"
         android:label="Fourth"
         tools:layout="@layout/fragment4" />
     <fragment
         android:id="@+id/navigation_5"
-        android:name="com.example.test1.Fragment5"
+        android:name="com.example.summerpracticsosinandrey.Fragment5"
         android:label="Fifth"
         tools:layout="@layout/fragment5" />
 </navigation>
